// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildResume > builds the example resume with the default theme 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <meta name="generator" content="MarkCV 2.0" />
    <title>Jane Doe - Product Designer</title>
    <link rel="stylesheet" href="./assets/theme/screen.css" media="screen" />
    <link rel="stylesheet" href="./assets/theme/print.css" media="print" />
  </head>
  <body class="mcv theme-default">
    <main class="mcv-shell">
      <section class="mcv-page-wrap">
        <div class="mcv-pin mcv-pin-left" aria-hidden="true"></div>
        <div class="mcv-pin mcv-pin-right" aria-hidden="true"></div>
        <main class="mcv-page">
          
    <header class="mcv-header">
      <div class="mcv-header-main">
        <h1 class="mcv-name">Jane Doe</h1>
        <p class="mcv-headline">Product Designer</p>
        <p class="mcv-summary">Product designer focused on content systems, interaction details, and shipping work fast.</p>
        <ul class="mcv-contacts"><li class="mcv-contact-item"><span class="mcv-contact-label">Email</span><a class="mcv-contact-link" href="mailto:jane@example.com">jane@example.com</a></li><li class="mcv-contact-item"><span class="mcv-contact-label">Phone</span><span class="mcv-contact-value">+86 138 0000 0000</span></li><li class="mcv-contact-item"><span class="mcv-contact-label">Location</span><span class="mcv-contact-value">Shanghai</span></li><li class="mcv-contact-item"><span class="mcv-contact-label">Website</span><a class="mcv-contact-link" href="https://janedoe.design">https://janedoe.design</a></li><li class="mcv-contact-item"><span class="mcv-contact-label">GitHub</span><a class="mcv-contact-link" href="https://github.com/janedoe">https://github.com/janedoe</a></li><li class="mcv-contact-item"><span class="mcv-contact-label">Portfolio</span><a class="mcv-contact-link" href="https://janedoe.design/work">Portfolio</a></li></ul>
      </div>
      <div class="mcv-header-avatar"><img src="./assets/content/002-avatar.svg" alt="Jane Doe" /></div>
    </header>
  
          <article class="mcv-content markdown-body">
            <h2>Summary</h2>
<p>Seven years building product experiences across content platforms, collaboration tools, and design systems.</p>
<blockquote>
<p>Product thinking should be precise enough for engineering and readable enough for hiring managers.</p>
</blockquote>
<h2>Experience</h2>
<h3>Senior Product Designer · Example Studio</h3>
<ul>
<li>Led the redesign of a B2B workflow product used by 20,000+ monthly users.</li>
<li>Built a design system that reduced delivery time for new screens by 35%.</li>
<li>Worked closely with engineering on responsive, print-friendly interfaces.</li>
</ul>
<h3>Product Designer · Northwind Labs</h3>
<table>
<thead>
<tr>
<th>Area</th>
<th>Result</th>
</tr>
</thead>
<tbody>
<tr>
<td>Activation</td>
<td>+18%</td>
</tr>
<tr>
<td>Retention</td>
<td>+11%</td>
</tr>
</tbody>
</table>
<h2>Projects</h2>
<h3>MarkCV 2.0</h3>
<ul>
<li>Defined the Markdown-first authoring experience.</li>
<li>Designed theme constraints for reliable A4 output.</li>
</ul>
<p><img src="./assets/content/001-portfolio-preview.svg" alt="Portfolio Preview"></p>
<hr>
<h2>Toolkit</h2>
<pre><code class="language-ts">const toolkit = ["Figma", "Framer", "Markdown", "Playwright"];
</code></pre>
<h2>Education</h2>
<h3>Bachelor of Industrial Design · Southeast University</h3>

          </article>
        </main>
      </section>
      <aside class="mcv-note" aria-label="Export tips">
        <div class="mcv-note-content">
          如何导出简历？<br />
          1）右键选择“打印”<br />
          2）目标打印机设置为“另存为PDF”
        </div>
      </aside>
    </main>
    <footer class="mcv-footer">
      Powered by <a class="mcv-footer-link" href="https://github.com/BigLiao/markCV">markCV</a>
    </footer>
  </body>
</html>
"
`;

exports[`buildResume > builds the legacy example resume with the legacy theme 1`] = `
"<!doctype html>
<html lang="zh-CN">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <meta name="generator" content="MarkCV 2.0" />
    <title>markCV - Beautiful online resume</title>
    <link rel="stylesheet" href="./assets/theme/screen.css" media="screen" />
    <link rel="stylesheet" href="./assets/theme/print.css" media="print" />
  </head>
  <body class="mcv theme-legacy">
    <main class="mcv-shell">
      <section class="mcv-page-wrap">
        <div class="mcv-pin mcv-pin-left" aria-hidden="true"></div>
        <div class="mcv-pin mcv-pin-right" aria-hidden="true"></div>
        <main class="mcv-page">
          
    <header class="mcv-header">
      <div class="mcv-header-main">
        <h1 class="mcv-name">bigLiao</h1>
        
        
        <ul class="mcv-contacts"><li class="mcv-contact-item"><span class="mcv-contact-label">Email</span><a class="mcv-contact-link" href="mailto:bigliao@markcv.com">bigliao@markcv.com</a></li><li class="mcv-contact-item"><span class="mcv-contact-label">Phone</span><span class="mcv-contact-value">151****1111</span></li></ul>
      </div>
      <div class="mcv-header-avatar"><img src="./assets/content/001-avatar.jpeg" alt="bigLiao" /></div>
    </header>
  
          <article class="mcv-content markdown-body">
            <h1>个人信息</h1>
<ul>
<li>胶布帝/男/1990</li>
<li>本科/萌鹿大学计算机系</li>
<li>工作年限：3年</li>
<li>微博：<a href="http://weibo.com/jobdeer">@JobDeer</a> （<code>如果没有技术相关内容，也可以不放</code>）</li>
<li>技术博客：<a href="http://blog.github.io">http://blog.github.io</a> ( <code>使用GitHub Host的Big较高</code> )</li>
<li>Github：<a href="http://github.com/geekcompany">http://github.com/geekcompany</a> ( <code>有原创repo的Github帐号会极大的提升你的个人品牌</code> )</li>
<li>手机：135******** （<code>如果是外地手机，可注明。如经常关机，要写上最优联系时间</code>）</li>
<li>Email：goodman@gmail.com （<code>虽然我觉得QQ邮箱无所谓，不过有些技术人员比较反感，建议用G</code>）</li>
<li>QQ/微信号：6*******（<code>提供一个通过网络可以联系到你的方式</code>）</li>
<li>期望职位：Web前端高级程序员，应用架构师</li>
<li>期望薪资：税前月薪15k~20k，特别喜欢的公司可例外</li>
<li>期望城市：北京</li>
</ul>
<h1>工作经历</h1>
<p>（工作经历按逆序排列，最新的在最前边，按公司做一级分组，公司内按二级分组）</p>
<h2>ABC公司 （ 2012年9月 ~ 2014年9月 ）</h2>
<h3>DEF项目</h3>
<p>我在此项目负责了哪些工作，分别在哪些地方做得出色/和别人不一样/成长快，这个项目中，我最困难的问题是什么，我采取了什么措施，最后结果如何。这个项目中，我最自豪的技术细节是什么，为什么，实施前和实施后的数据对比如何，同事和领导对此的反应如何。</p>
<h3>GHI项目</h3>
<p>我在此项目负责了哪些工作，分别在哪些地方做得出色/和别人不一样/成长快，这个项目中，我最困难的问题是什么，我采取了什么措施，最后结果如何。这个项目中，我最自豪的技术细节是什么，为什么，实施前和实施后的数据对比如何，同事和领导对此的反应如何。</p>
<h3>其他项目</h3>
<p>（每个公司写2~3个核心项目就好了，如果你有非常大量的项目，那么按分类进行合并，每一类选一个典型写出来。其他的一笔带过即可。）</p>
<h2>JKL公司 （ 2010年3月 ~ 2012年8月 ）</h2>
<h3>MNO项目</h3>
<p>我在此项目负责了哪些工作，分别在哪些地方做得出色/和别人不一样/成长快，这个项目中，我最困难的问题是什么，我采取了什么措施，最后结果如何。这个项目中，我最自豪的技术细节是什么，为什么，实施前和实施后的数据对比如何，同事和领导对此的反应如何。</p>
<h3>PQR项目</h3>
<p>我在此项目负责了哪些工作，分别在哪些地方做得出色/和别人不一样/成长快，这个项目中，我最困难的问题是什么，我采取了什么措施，最后结果如何。这个项目中，我最自豪的技术细节是什么，为什么，实施前和实施后的数据对比如何，同事和领导对此的反应如何。</p>
<h3>其他项目</h3>
<p>（每个公司写2~3个核心项目就好了，如果你有非常大量的项目，那么按分类进行合并，每一类选一个典型写出来。其他的一笔带过即可。）</p>
<h1>开源项目和作品</h1>
<p>（这一段用于放置工作以外的、可证明你的能力的材料）</p>
<h2>开源项目</h2>
<p>（对于程序员来讲，没有什么比Show me the code能有说服力了）</p>
<ul>
<li><a href="http://github.com/yourname/projectname">STU</a>：项目的简要说明，Star和Fork数多的可以注明</li>
<li><a href="http://github.com/yourname/projectname">WXYZ</a>：项目的简要说明，Star和Fork数多的可以注明</li>
</ul>
<h2>技术文章</h2>
<p>（挑选你写作或翻译的技术文章，好的文章可以从侧面证实你的表达和沟通能力，也帮助招聘方更了解你）</p>
<ul>
<li><a href="http://get.jobdeer.com/706.get">一个产品经理眼中的云计算：前生今世和未来</a></li>
<li><a href="http://get.jobdeer.com/343.get">来自HeroKu的HTTP API 设计指南(翻译文章)</a> （<code>好的翻译文章可以侧证你对英文技术文档的阅读能力</code>）</li>
</ul>
<h2>演讲和讲义</h2>
<p>（放置你代表公司在一些技术会议上做过的演讲，以及你在公司分享时制作的讲义）</p>
<ul>
<li>2014架构师大会演讲：<a href="http://jobdeer.com">如何通过Docker优化内部开发</a></li>
<li>9月公司内部分享：<a href="http://jobdeer.com">云计算的前生今世</a></li>
</ul>
<h1>技能清单</h1>
<p>（我一般主张将技能清单写入到工作经历里边去。不过很难完整，所以有这么一段也不错）</p>
<p>以下均为我熟练使用的技能</p>
<ul>
<li>Web开发：PHP/Hack/Node</li>
<li>Web框架：ThinkPHP/Yaf/Yii/Lavaral/LazyPHP</li>
<li>前端框架：Bootstrap/AngularJS/EmberJS/HTML5/Cocos2dJS/ionic</li>
<li>前端工具：Bower/Gulp/SaSS/LeSS/PhoneGap</li>
<li>数据库相关：MySQL/PgSQL/PDO/SQLite</li>
<li>版本管理、文档和自动化部署工具：Svn/Git/PHPDoc/Phing/Composer</li>
<li>单元测试：PHPUnit/SimpleTest/Qunit</li>
<li>云和开放平台：SAE/BAE/AWS/微博开放平台/微信应用开发</li>
</ul>

          </article>
        </main>
      </section>
      <aside class="mcv-note" aria-label="Export tips">
        <div class="mcv-note-content">
          如何导出简历？<br />
          1）右键选择“打印”<br />
          2）目标打印机设置为“另存为PDF”
        </div>
      </aside>
    </main>
    <footer class="mcv-footer">
      Powered by <a class="mcv-footer-link" href="https://github.com/BigLiao/markCV">markCV</a>
    </footer>
  </body>
</html>
"
`;

exports[`buildResume > builds the same example resume with the minimal theme override 1`] = `
"<!doctype html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <meta name="generator" content="MarkCV 2.0" />
    <title>Jane Doe - Product Designer</title>
    <link rel="stylesheet" href="./assets/theme/screen.css" media="screen" />
    <link rel="stylesheet" href="./assets/theme/print.css" media="print" />
  </head>
  <body class="mcv theme-minimal">
    <main class="mcv-shell">
      <section class="mcv-page-wrap">
        <div class="mcv-pin mcv-pin-left" aria-hidden="true"></div>
        <div class="mcv-pin mcv-pin-right" aria-hidden="true"></div>
        <main class="mcv-page">
          
    <header class="mcv-header">
      <div class="mcv-header-main">
        <h1 class="mcv-name">Jane Doe</h1>
        <p class="mcv-headline">Product Designer</p>
        <p class="mcv-summary">Product designer focused on content systems, interaction details, and shipping work fast.</p>
        <ul class="mcv-contacts"><li class="mcv-contact-item"><span class="mcv-contact-label">Email</span><a class="mcv-contact-link" href="mailto:jane@example.com">jane@example.com</a></li><li class="mcv-contact-item"><span class="mcv-contact-label">Phone</span><span class="mcv-contact-value">+86 138 0000 0000</span></li><li class="mcv-contact-item"><span class="mcv-contact-label">Location</span><span class="mcv-contact-value">Shanghai</span></li><li class="mcv-contact-item"><span class="mcv-contact-label">Website</span><a class="mcv-contact-link" href="https://janedoe.design">https://janedoe.design</a></li><li class="mcv-contact-item"><span class="mcv-contact-label">GitHub</span><a class="mcv-contact-link" href="https://github.com/janedoe">https://github.com/janedoe</a></li><li class="mcv-contact-item"><span class="mcv-contact-label">Portfolio</span><a class="mcv-contact-link" href="https://janedoe.design/work">Portfolio</a></li></ul>
      </div>
      <div class="mcv-header-avatar"><img src="./assets/content/002-avatar.svg" alt="Jane Doe" /></div>
    </header>
  
          <article class="mcv-content markdown-body">
            <h2>Summary</h2>
<p>Seven years building product experiences across content platforms, collaboration tools, and design systems.</p>
<blockquote>
<p>Product thinking should be precise enough for engineering and readable enough for hiring managers.</p>
</blockquote>
<h2>Experience</h2>
<h3>Senior Product Designer · Example Studio</h3>
<ul>
<li>Led the redesign of a B2B workflow product used by 20,000+ monthly users.</li>
<li>Built a design system that reduced delivery time for new screens by 35%.</li>
<li>Worked closely with engineering on responsive, print-friendly interfaces.</li>
</ul>
<h3>Product Designer · Northwind Labs</h3>
<table>
<thead>
<tr>
<th>Area</th>
<th>Result</th>
</tr>
</thead>
<tbody>
<tr>
<td>Activation</td>
<td>+18%</td>
</tr>
<tr>
<td>Retention</td>
<td>+11%</td>
</tr>
</tbody>
</table>
<h2>Projects</h2>
<h3>MarkCV 2.0</h3>
<ul>
<li>Defined the Markdown-first authoring experience.</li>
<li>Designed theme constraints for reliable A4 output.</li>
</ul>
<p><img src="./assets/content/001-portfolio-preview.svg" alt="Portfolio Preview"></p>
<hr>
<h2>Toolkit</h2>
<pre><code class="language-ts">const toolkit = ["Figma", "Framer", "Markdown", "Playwright"];
</code></pre>
<h2>Education</h2>
<h3>Bachelor of Industrial Design · Southeast University</h3>

          </article>
        </main>
      </section>
      <aside class="mcv-note" aria-label="Export tips">
        <div class="mcv-note-content">
          如何导出简历？<br />
          1）右键选择“打印”<br />
          2）目标打印机设置为“另存为PDF”
        </div>
      </aside>
    </main>
    <footer class="mcv-footer">
      Powered by <a class="mcv-footer-link" href="https://github.com/BigLiao/markCV">markCV</a>
    </footer>
  </body>
</html>
"
`;
